<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sharangirdhani.homework2.MainActivity">

    <Button
        android:id="@+id/btnAddExpense"
        android:layout_width="344dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:text="@string/btn_add_expense" />

    <Button
        android:id="@+id/btnEditExpense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btnAddExpense"
        android:layout_alignEnd="@+id/btnAddExpense"
        android:layout_alignLeft="@+id/btnAddExpense"
        android:layout_alignRight="@+id/btnAddExpense"
        android:layout_below="@+id/btnAddExpense"
        android:layout_centerVertical="true"
        android:layout_marginTop="24dp"
        android:text="@string/btn_edit_expense" />

    <Button
        android:id="@+id/btnDeleteExpense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btnEditExpense"
        android:layout_alignEnd="@+id/btnEditExpense"
        android:layout_alignLeft="@+id/btnEditExpense"
        android:layout_alignRight="@+id/btnEditExpense"
        android:layout_below="@+id/btnEditExpense"
        android:layout_centerVertical="true"
        android:layout_marginTop="24dp"
        android:text="@string/btn_delete_expense" />

    <Button
        android:id="@+id/btnShowExpenses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/btnDeleteExpense"
        android:layout_alignLeft="@+id/btnDeleteExpense"
        android:layout_alignRight="@+id/btnDeleteExpense"
        android:layout_alignStart="@+id/btnDeleteExpense"
        android:layout_below="@+id/btnDeleteExpense"
        android:layout_centerVertical="true"
        android:layout_marginTop="24dp"
        android:text="@string/btn_show_expenses" />

    <Button
        android:id="@+id/btnFinish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/btnShowExpenses"
        android:layout_alignLeft="@+id/btnShowExpenses"
        android:layout_alignRight="@+id/btnShowExpenses"
        android:layout_alignStart="@+id/btnShowExpenses"
        android:layout_below="@+id/btnShowExpenses"
        android:layout_centerVertical="true"
        android:layout_marginTop="24dp"
        android:text="@string/btn_finish" />
</RelativeLayout>
