<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sharangirdhani.homework2.DeleteExpenseActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_label_select_expense"
        android:id="@+id/btnSelectExpense"
        android:layout_gravity="center_horizontal"
        android:onClick="selectExpense"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/tvExpenseName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:text="@string/expense_name"
        android:textColor="@android:color/black"
        android:layout_below="@+id/btnSelectExpense"
        android:layout_toLeftOf="@+id/btnSelectExpense"
        android:layout_toStartOf="@+id/btnSelectExpense"
        android:layout_marginRight="15dp"
        android:layout_marginEnd="15dp" />

    <EditText
        android:id="@+id/etExpenseName"
        android:layout_width="344dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvExpenseName"
        android:layout_alignStart="@+id/tvExpenseName"
        android:layout_below="@+id/tvExpenseName"
        android:ems="10"
        android:hint="@string/hint_expense_name"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/tvCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:text="@string/tv_category"
        android:textColor="@android:color/black"
        android:layout_below="@+id/etExpenseName"
        android:layout_alignLeft="@+id/etExpenseName"
        android:layout_alignStart="@+id/etExpenseName" />

    <Spinner
        android:id="@+id/spinnerCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvCategory"
        android:layout_alignLeft="@+id/tvCategory"
        android:layout_alignStart="@+id/tvCategory"
        android:layout_alignRight="@+id/etExpenseName"
        android:layout_alignEnd="@+id/etExpenseName" />

    <TextView
        android:id="@+id/tvAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spinnerCategory"
        android:layout_alignStart="@+id/spinnerCategory"
        android:layout_below="@+id/spinnerCategory"
        android:layout_marginTop="16dp"
        android:text="@string/tv_amount"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/etAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvAmount"
        android:layout_alignStart="@+id/tvAmount"
        android:layout_below="@+id/tvAmount"
        android:ems="10"
        android:inputType="number"
        android:layout_alignRight="@+id/spinnerCategory"
        android:layout_alignEnd="@+id/spinnerCategory" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/tv_date"
        android:textColor="@android:color/black"
        android:layout_below="@+id/etAmount"
        android:layout_alignLeft="@+id/etAmount"
        android:layout_alignStart="@+id/etAmount" />

    <EditText
        android:id="@+id/etDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/etAmount"
        android:layout_alignLeft="@+id/tvDate"
        android:layout_alignRight="@+id/etAmount"
        android:layout_alignStart="@+id/tvDate"
        android:layout_below="@+id/tvDate"
        android:ems="10"
        android:inputType="date"
        android:textColor="@android:color/black" />

    <ImageButton
        android:id="@+id/imageCalender"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/calendar"
        tools:ignore="ContentDescription"
        android:layout_alignTop="@+id/tvDate"
        android:layout_alignRight="@+id/etDate"
        android:layout_alignEnd="@+id/etDate"
        android:layout_alignBottom="@+id/etDate" />

    <TextView
        android:id="@+id/tvReciept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:text="@string/tv_reciept"
        android:textColor="@android:color/black"
        android:layout_below="@+id/etDate"
        android:layout_alignLeft="@+id/etDate"
        android:layout_alignStart="@+id/etDate" />


    <ImageView
        android:id="@+id/imageReciept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/tvAmount"
        android:layout_alignLeft="@+id/tvReciept"
        android:layout_alignRight="@+id/tvAmount"
        android:layout_alignStart="@+id/tvReciept"
        android:layout_below="@+id/tvReciept"
        app:srcCompat="@drawable/search"
        tools:ignore="ContentDescription"
        android:onClick="getImage" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="deleteExpense"
        android:text="@string/btnDelete"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/imageReciept"
        android:layout_toEndOf="@+id/imageReciept"
        android:layout_marginBottom="39dp" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_cancel"
        android:onClick="finishActivity"
        android:layout_alignBaseline="@+id/btnDelete"
        android:layout_alignBottom="@+id/btnDelete"
        android:layout_toLeftOf="@+id/imageCalender"
        android:layout_toStartOf="@+id/imageCalender"
        android:layout_marginRight="15dp"
        android:layout_marginEnd="15dp" />

</RelativeLayout>
